(#91): Have a STORAGE_UNINITIALIZED for construction with all-default properties

If one does a plain

  GdkPixbuf *pixbuf = g_object_new (GDK_TYPE_PIXBUF, NULL);

Then all the construct properties use their default values.  This
means that both "pixels" and "pixel-bytes" get passed as NULL to
gdk_pixbuf_set_property().

Later, trying to get the property for "pixel-bytes" would assert,
incorrectly, because it was trying to create a GBytes from a NULL
pixels storage.

This commit adds a test for that construction case, and tests for
constructing with g_object_new() in general.

Fixes https://gitlab.gnome.org/GNOME/gdk-pixbuf/issues/91